# storeSpeedyDemo

./: .gitignore  README.md  package-lock.json  run_app.sh  run_front.sh  setup.bat
app/: App.js  README.md  app.json  config.js  index.js  package-lock.json  package.json  run_front.sh
app/.expo/: directory_structure.txt
app/.expo/web/: directory_structure.txt
app/.expo/web/cache/: directory_structure.txt
app/.expo/web/cache/production/images/: directory_structure.txt
app/.expo/web/cache/production/images/favicon/: directory_structure.txt
app/components/: AisleList.js  GroceryList.js  InputWithButton.js
app/navigation/: MainTabNavigator.js
app/screens/: HomeScreen.js  SettingsScreen.js  StoreScreen.js
app/utils/: api.js  cookieManager.js
server/: CMakeLists.txt  build 2.sh
server/driver/src/: main.cpp
server/driver/src/api/: grocery_list_util.cpp  grocery_list_util.h
server/driver/src/api/endpoints/: check_item 2.h  check_item.cpp  compute_path 2.cpp  compute_path 2.h  endpoints.h  grocery_list.cpp  grocery_list.h  ping 2.h  ping.cpp  update_aisle_data 2.cpp  update_aisle_data.h  update_grocery_list 2.cpp  update_grocery_list.cpp  update_grocery_list.h  update_location 2.cpp  update_location 2.h
server/driver/src/incudes/: constants 2.h  constants.h
server/driver/src/objects/: cart 2.h
server/programs/path_solver/src/: CMakeLists.txt  Edge.cpp  Node.h  Path.cpp  Path.h  StoreGraph.cpp  StoreGraphFactory.cpp  StoreGraphFactory.h  main.cpp
server/programs/store_parse/: README.txt  vmstoretext_readable.txt
server/programs/store_parse/src/: CMakePresents.json  Edge.h  Maze.cpp  Maze.h  Node.cpp  NodeFactory.cpp  NodeFactory.h  StoreGraph.cpp  StoreGraph.h  StoreGraphFactory.cpp  main.cpp
